next: get groups

--- a/todo
+++ b/todo
@@ -1,6 +1,8 @@
 [] download csv
 [] max lenght of 100 for csv
 [] search by category in record
+[] add method to record
+[] make checkin_status flexible
 
 //chart
 [] by group (pia)
